# YetAnotherPowerMenu

./: Cargo.toml  README.md  gdkkeysyms.md  gdkkeysyms.txt
examples/: config.ron  style.css
src/: app.rs  config.ron  config.rs  main.rs  state.rs  style.css  ui.rs
