[package]
name = "yapm"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
gdk = { version = "0.13.2", features=["v3_20"]}
gio = "0.9.1"
glib = "0.10.1"
chrono = "0.4.15"
