[package]
name = "yapm"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.9.2"
gdk = { version = "0.13.2", features=["v3_20"]}
gio = "0.9.1"
glib = "0.10.1"
chrono = "0.4.15"
ron = "0.6.1"
serde = {version="1.0.115",features=["derive"]}
gdk-sys = "0.10.0"
